[package]
name = "memevm"
version = "0.1.0"
authors = ["Damian <damian@autistici.org>"]
edition = "2018"

[features]
default = []
gui = ["imgui", "imgui-gfx-renderer", "glutin", "gfx", "gfx_window_glutin", "gfx_device_gl", "gfx_gl"]

[dependencies]
log = "0.4.6"
simple_logger = "1.0.1"
enum-map = "0.4.1"
num-traits = "0.2.6"
num-derive = "0.2.3"
byteorder = "1.2.7"
hexdump = "0.1.0"
pancurses = "0.16.0"

imgui = { version = "0.0.21", optional = true }
imgui-gfx-renderer = { version = "0.0.21", optional = true }
glutin = { version = "0.19.0", optional = true }
gfx = { version = "0.17.1", optional = true }
gfx_window_glutin = { version = "0.28.0", optional = true }
gfx_device_gl = { version = "0.15.4", optional = true }
gfx_gl = { version = "0.5.0", optional = true }